@@ -1,7 +1,7 @@
 ########################### apm-server #######################################
 
 apm-server:
-  host: "localhost:8080"
+  host: "localhost:8200"
   secret_token: {{ secret_token }}
   ssl.enabled: {{ ssl_enabled }}
   ssl.certificate:  {{ ssl_cert }}
